B&L QA/objects/Call_Plan__c.object
<CustomObject>
    <description>INDSU Sales/Service team members to upload the monthly call plan</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <description>Showing the current status of the call plan.</description>
        <formula>IF(AND( ISPICKVAL( Status__c, &apos;Draft&apos;) , IsRejected__c), &apos;Rejected&apos;, Text(Status__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Comments__c</fullName>
        <description>INDSU field to capture the comments by the executive(Sales or Service)</description>
        <label>Executive Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsRejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Comments__c</fullName>
        <description>INDSU field to capture the comments by the manager</description>
        <label>Manager Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager_s_Email_ID__c</fullName>
        <label>Manager&apos;s Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>INDSU field to indicate the month the plan is for.</description>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Contacts__c</fullName>
        <label>Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts_of_A__c</fullName>
        <label>Number of Contacts of A</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts_of_B__c</fullName>
        <label>Number of Contacts of B</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts_of_C__c</fullName>
        <label>Number of Contacts of C</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts_of_Others__c</fullName>
        <label>Number of Contacts of Others</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>INDSU field to capture the status of the plan.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <label>Week</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>INDSU field to indicate the year the plan is for.</description>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Call Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Approved</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>批准</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CHNSU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Call_Plans_Approved</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Call Plans - Approved</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>INDSUSalesAdministrator</roleAndSubordinates>
            <roleAndSubordinates>KORSU_Sales_Administrator</roleAndSubordinates>
            <roleAndSubordinates>THA_SU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Call_Plans_Draft</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Call Plans - Draft</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>INDSUSalesAdministrator</roleAndSubordinates>
            <roleAndSubordinates>KORSU_Sales_Administrator</roleAndSubordinates>
            <roleAndSubordinates>THA_SU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Call_Plans_Rejected</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Call Plans - Rejected</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>INDSUSalesAdministrator</roleAndSubordinates>
            <roleAndSubordinates>KORSU_Sales_Administrator</roleAndSubordinates>
            <roleAndSubordinates>THA_SU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Call_Plans_Submitted</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Call Plans - Submitted</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>INDSUSalesAdministrator</roleAndSubordinates>
            <roleAndSubordinates>KORSU_Sales_Administrator</roleAndSubordinates>
            <roleAndSubordinates>THA_SU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Draft</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>草稿</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CHNSU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rejected</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>回绝/需修正</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CHNSU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Submitted</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>提交</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CHNSU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CLP{00000000}</displayFormat>
        <label>Call Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Plans</pluralLabel>
    <recordTypes>
        <fullName>APACSU_Call_Plan</fullName>
        <active>true</active>
        <description>APACSU record type to allow Sales and Service team members to plan their monthly call activities.</description>
        <label>APACSU Call Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>INDSU_Call_Plan</fullName>
        <active>true</active>
        <description>INDSU record type to allow Sales and Service team members to plan their monthly call activities.</description>
        <label>INDSU Call Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>KOR_SOLTA_CallPlan</fullName>
        <active>true</active>
        <description>KOR SOLTA Record type to allow Sales and Service team members to plan their Call Activities.</description>
        <label>KOR SOLTA CallPlan</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>